# AeonTerraSimple

./: README.md  cleanup_project.sh  manual_cleanup.sh  profile_simulation.py  run_planet_sim.py  test_planet.py  test_visualizations.py
docs/: RedesignDocument.md  api_documentation.md  cpp_implementation_summary.md  design_document.md  export_formats.md  heightmap_cpp_integration_plan.md  implementation_notes.md  implementation_roadmap.md  project_plan.md  scientific_principles.md  tectonics_enhancement_plan.md  user_guide.md
output/planet_20250314_050222/: simulation_history.json
planet_sim/core/: biome.py  climate.py  enhanced_planet.py  erosion.py  mercator_tectonics.py  planet.py  tectonics.py
planet_sim/cpp/: .gitignore  CMakeLists.txt  README.md  biome_example.py  build.sh  build_climate.sh  build_cpp_only.sh  build_planet.sh  cleanup.sh  climate_example.py  erosion_example.py  example.py  example_heightmap.py  fixed_test.cpp  heightmap_demo.cpp  heightmap_example.py  integrated_earth_example.py  interactive_heightmap_ui.py  minimal_test.cpp  optimized_config_build.sh  optimized_heightmap_example.py  planet_example.py  run_demo.sh  run_fixed_test.sh  run_heightmap_verification.sh  run_minimal_test.sh  run_simple_verify.sh  run_simplified_verification.sh  run_tectonic_verification.sh  run_verification.sh  run_verification_test.sh  simple_test.cpp  simplified_verification  simplified_verification.cpp  tectonic_verification.cpp  tectonics_example.py  test_build.sh  test_heightmap.raw  verification_test.cpp  verify_full_pipeline.sh
planet_sim/cpp/cmake/: FindEigen3.cmake  FindPybind11.cmake
planet_sim/cpp/heightmap_output/: mid_erosion_heightmap.pgm
planet_sim/cpp/include/aeonterracpp/core/: biome_climate_feedback.h  biome_system.h  climate_system.h  enhanced_erosion.h  enhanced_planet.h  enhanced_tectonics.h  heightmap_generator.h  planet.h  river_ocean_chemistry.h  spatial_index.h  spherical_grid.h  tectonics.h  vector_types.h
planet_sim/cpp/include/aeonterracpp/heightmap/: heightmap_generator.h
planet_sim/cpp/include/aeonterracpp/optimization/: configuration.h  memory_optimization.h  parallel_processing.h  spatial_acceleration.h
planet_sim/cpp/python/: CMakeLists.txt  __init__.py  bindings.cpp  biome_bindings.cpp  chemistry_bindings.cpp  climate_bindings.cpp  erosion_bindings.cpp  feedback_bindings.cpp  heightmap_bindings.cpp  optimization_bindings.cpp  planet_bindings.cpp  spherical_grid_bindings.cpp  tectonics_bindings.cpp
planet_sim/cpp/src/: CMakeLists.txt
planet_sim/cpp/src/core/: atmospheric_circulation.cpp  biome_climate_feedback.cpp  biome_system.cpp  climate_system.cpp  enhanced_erosion.cpp  enhanced_planet.cpp  heightmap_generator.cpp  hydrological_system.cpp  oceanic_circulation.cpp  planet.cpp  river_ocean_chemistry.cpp  spatial_index.cpp  spherical_grid.cpp  tectonics.cpp  vector_types.cpp
planet_sim/cpp/src/examples/: climate_geology_feedback.cpp  supercontinent_cycle.cpp
planet_sim/cpp/src/heightmap/: CMakeLists.txt  heightmap_generator.cpp
planet_sim/cpp/src/optimization/: CMakeLists.txt  memory_optimization.cpp  parallel_processing.cpp  spatial_acceleration.cpp
planet_sim/cpp/tests/: CMakeLists.txt  test_biome_system.cpp  test_climate_system.cpp  test_heightmap_generator.cpp  test_planet.cpp  test_spherical_grid.cpp  test_tectonics.cpp
planet_sim/utils/: export.py  map_visualizer.py  sphere_grid.py  visualization.py
planet_sim/visualization/: data_visualizer.py
